--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+    <div class="info">
+        <h3>Select a button to play the game</h1>
+        <h3>-----------------</h1>
+        <h3>User score: 0</h1>
+        <h3>Computer score: 0</h1>
+    </div>
+    
+
     <script src="script.js"></script>
 </body>
 </html>
